# pdf-file-renamer

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  SCREENSHOT_TEST_RESULTS.md  TEST_SUMMARY.md  pyproject.toml  run_tests.py
.github/workflows/: tests.yml
file_renamer/: __init__.py  ai_extractor.py  cli.py  models.py  pdf_extractor.py
tests/: __init__.py  conftest.py  test_ai_extractor.py  test_cli.py  test_integration.py  test_models.py  test_package.py  test_pdf_extractor.py  test_performance.py
