[project]
name = "file-renamer"
version = "0.1.0"
description = "A CLI tool to rename PDF files based on bibliographic information extracted using Claude"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic-ai[anthropic]>=0.0.1",
    "pypdf>=3.17.0",
    "python-dotenv>=1.0.0",
    "click>=8.1.0",
]

[project.scripts]
pdf-renamer = "file_renamer.cli:main"
