[project]
name = "file-renamer"
version = "0.2.0"
description = "A CLI tool to rename PDF files and screenshots based on their content using Claude AI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic-ai[anthropic]>=0.0.1",
    "pypdf>=3.17.0",
    "python-dotenv>=1.0.0",
    "click>=8.1.0",
    "pytesseract>=0.3.10",
    "pillow>=10.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
    "faker>=19.0.0",
]

[project.scripts]
pdf-renamer = "file_renamer.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["file_renamer"]
omit = ["tests/*", "*/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
